feat: Complete Trading Strategy API with 8/8 tests passing, real HINDALCO data, FastAPI, and Docker

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 DATABASE_URL=postgresql://user:password@localhost:5432/trading_db
+
+👨‍💻 Author
+Ashutosh Pandey
+
+GitHub: @ashutoshpandey18
+
+Email: ashutoshpandey23june2005@gmail.com
